--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,6 @@
 /**
-* Template Name: Techie - v4.7.0
-* Template URL: https://bootstrapmade.com/techie-free-skin-bootstrap-3/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
+* Template Name: Techie costumised by choaz
+
 */
 
 /*--------------------------------------------------------------
