--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,8 +7,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #444444;
+  font-family: "Poppins", sans-serif;
 }
 
 .floating {
@@ -18,16 +17,6 @@ body {
 p {
   text-align: justify;
   text-align-last: center;
-}
-
-a {
-  color: #3bb78f;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #2f9a78;
-  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -443,6 +432,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 20px;
 }
 
+
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -567,6 +557,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
+  color: #2c4964;
 }
 
 .section-title h2::after {
@@ -591,10 +582,14 @@ section {
   padding: 120px 0;
 }
 
-.about .content h3 {
-  font-weight: 600;
-  font-size: 32px;
+#about .content p {
   color: #3bb78f;
+}
+.about .content h3 {
+  font-weight: 700;
+  font-size: 32px;
+  color: #2c4964;
+  
 }
 
 .about .content ul {
@@ -799,10 +794,34 @@ section {
 /*--------------------------------------------------------------
 # projects
 --------------------------------------------------------------*/
+.projects a {
+  color: #2c4964;
+  text-decoration: none;
+}
+.projects h5 {
+  color: #2c4964;
+}
+.projects p {
+  color: #3bb78f;
+}
+
+.projects a:hover {
+  color: #1e3042;
+  text-decoration: none;
+}
+
+
 .projects .icon-box h4 {
   font-size: 20px;
   font-weight: 700;
   margin: 5px 0 10px 60px;
+
+}
+
+.projects .row {
+
+  margin-bottom: 70px;
+
 }
 
 .projects .icon-box i {
@@ -1153,7 +1172,7 @@ section {
 .tools ul {
   padding: 0;
   list-style: none;
-  color: #444444;
+  color: #3bb78f;
   text-align: center;
   line-height: 20px;
   font-size: 14px;
@@ -1203,6 +1222,7 @@ section {
   color: #fff;
   background-color: #3bb78f;
   background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+  font-weight: 700;
 }
 
 .tools .advanced {
@@ -1321,6 +1341,9 @@ section {
   padding: 20px 0 30px 0;
   background: #fff;
 }
+.contact p {
+  color: #3bb78f;
+}
 
 .contact .info-box i {
   font-size: 32px;
@@ -1421,7 +1444,9 @@ section {
 .contact .php-email-form button[type=submit]:hover {
   background: #7b27d8;
 }
-
+.contact p {
+  text-align: center;
+}
 @-webkit-keyframes animate-loading {
   0% {
     transform: rotate(0deg);
